# STEB

./: .gitignore  README.md  pyproject.toml  requirements.txt
.agents/: code-structure.md  runbook.md
core_functional_modules/: start_servers.sh
core_functional_modules/PretrainedSED/: README.md  batch_inference.py  config.py
core_functional_modules/PretrainedSED/models/: prediction_wrapper.py
core_functional_modules/captioner/: emotion_style_summary.py  qwen3_caption_server.py
core_functional_modules/extract_timestamp/: combine_time_event.py  process_qwen3_asr.py
core_functional_modules/utils/: file_task_manager.py  parquet_io.py  qwen_asr_vllm_compat.py  vllm_client.py
docs/: install_optional.md
evaluation/: run_eval.sh  service_orchestrator.sh
evaluation/eval/: data_loader.py  merge_hyp_features.py  prepare_hyp_parquet.py  run_full_eval.py  shard_utils.py
evaluation/eval/scorers/: __init__.py  _llm_utils.py  _prompt_versions.py  base.py  bleu_scorer.py  comet_scorer.py  duration_scorer.py  event_f1_scorer.py  exp_ensemble_scorer.py  llm_emotion_scorer.py  llm_event_scorer.py  llm_style_scorer.py  slc_scorer.py  speaker_sim_scorer.py  text_normalization.py
